Jenkins_Tools/sonar/70-sonarqube-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:lts-community
        ports:
        - containerPort: 9000

        volumeMounts:
        - name: sonarqube-storage
          mountPath: /opt/sonarqube/data

      volumes:
      - name: sonarqube-storage
        persistentVolumeClaim:
          claimName: sonarqube-pvc
