Jenkins_Tools/sonar/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: sonarqube

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:

      - name: postgres
        image: postgres:15

        ports:
        - containerPort: 5432

        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage

      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
